[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Message Box.gd" type="Script" id=1]
[ext_resource path="res://Assets/dialogue_box.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]

resource_name = "flashing thing"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Continue Symbol:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Message Box" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
display_text = null

[node name="MainContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 25
custom_constants/margin_top = 375
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="NinePatchRect" type="NinePatchRect" parent="MainContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 375.0
margin_right = 999.0
margin_bottom = 575.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 70
patch_margin_top = 40
patch_margin_right = 70
patch_margin_bottom = 40

[node name="InsideContainer" type="MarginContainer" parent="MainContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 375.0
margin_right = 999.0
margin_bottom = 575.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 35
custom_constants/margin_top = 15
custom_constants/margin_left = 35
custom_constants/margin_bottom = 15

[node name="RichTextLabel" type="RichTextLabel" parent="MainContainer/InsideContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 15.0
margin_right = 939.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="Character Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.03
one_shot = false
autostart = true

[node name="Punctuation Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.14
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.2
"anims/flashing thing" = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Continue Symbol" type="Polygon2D" parent="." index="4"]

visible = false
position = Vector2( 512, 550 )
polygon = PoolVector2Array( -10, -10, 10, -10, 0, 10, -10, -10 )
uv = PoolVector2Array(  )
color = Color( 0.644531, 0.644531, 0.644531, 0.403333 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[connection signal="timeout" from="Character Timer" to="." method="_on_Character_Timer_timeout"]

[connection signal="timeout" from="Punctuation Timer" to="." method="_on_Punctuation_Timer_timeout"]


